# bookshopnearme-platform

./: .env.example  .gitignore  DEPLOYMENT_CHECKLIST.md  PROJECT_STATUS.md  pyproject.toml  railway.toml
apps/gsc-agent/: pyproject.toml
apps/gsc-agent/gsc_agent/: __init__.py  agent.py  client.py  credentials.py  ingestion.py
apps/mcp/: README.md  glama.yaml  pyproject.toml  smithery.yaml
apps/mcp/bookshopnearme_mcp/: __init__.py  api_client.py  server.py
apps/seo-agent/: pyproject.toml  railway.toml
apps/seo-agent/seo_agent/: agent.py  analyzer.py  api.py  repository.py  scorer.py
docs/: configuration.md  database_schema.md  deployment.md  gsc_oauth_setup.md  installation.md  sprint2_supabase_migration.md  sprint_roadmap.md
scripts/: gsc_diagnostic.py  gsc_oauth_setup.py  seed.py  verify.py  verify_supabase.py
shared/config/: settings.py
shared/database/: __init__.py  connection.py  migrations.py  supabase_connection.py
shared/logging/: __init__.py  logger.py
supabase/migrations/: 001_initial_schema.sql  002_add_site_url.sql  003_seo_opportunities.sql
tests/: conftest.py  test_database.py  test_gsc_ingestion.py  test_logging.py  test_mcp_client.py  test_seo_analyzer.py  test_seo_repository.py  test_seo_scoring.py
