[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookshopnearme-platform"
version = "0.1.0"
description = "Book Demand Intelligence Platform for BookShopNearMe.lk"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
    "google-auth>=2.29.0",
    "google-api-python-client>=2.127.0",
    "schedule>=1.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-cov>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.hatch.build.targets.wheel]
packages = ["shared"]
