[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bookshopnearme-mcp"
version = "0.1.0"
description = "MCP server for BookShopNearMe.lk — search and explore the Sri Lankan book catalog"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.12"
authors = [{ name = "BookShopNearMe.lk" }]
keywords = ["mcp", "books", "sri-lanka", "bookshop"]
classifiers = [
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "httpx>=0.27.0",
]

[project.scripts]
bookshopnearme-mcp = "bookshopnearme_mcp.server:main"

[project.urls]
Homepage = "https://bookshopnearme.lk"
Repository = "https://github.com/bookshopnearme/bookshopnearme-mcp"

[tool.hatch.build.targets.wheel]
packages = ["bookshopnearme_mcp"]

[tool.hatch.build.targets.sdist]
include = ["bookshopnearme_mcp/", "README.md", "pyproject.toml"]
